Fix for Playlist truncation error

--- a/app/react/styles/modules/playlist-feature.styl
+++ b/app/react/styles/modules/playlist-feature.styl
@@ -47,6 +47,7 @@
   top 0
   left 0
   overflow hidden
+  color $black
   
   &:hover, 
   &:hover *
