--- a/app/react/styles/modules/playlist.styl
+++ b/app/react/styles/modules/playlist.styl
@@ -47,10 +47,9 @@
 
 .playlist__ctas
   .btn
-    margin-bottom 1rem
-    margin-right 0
+    margin 0 .5rem 1rem
     +above(md)
-      margin 2rem .5rem 1rem
+      margin-top 2rem
 
 .playlist__background-color
   position absolute
